# string-calculator-hs

./: .gitignore  LICENSE  README.md  hie.yaml  shell.nix  string-calculator.cabal  stringcalculator.cabal
app/: Main.hs
src/: Parser.hs  StringCalculator.hs
test/: StringCalculatorSpec.hs
