name:                string-calculator
version:             0.1.0.0
homepage:            https://github.com/JesusMtnez/string-calculator-hs
author:              JesusMtnez
maintainer:          @JesusMtnez
copyright:           2020 JesusMtnez
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

common shared-properties
  default-language:      Haskell2010
  ghc-options:           -Wall

library
  import:              shared-properties
  hs-source-dirs:      src
  exposed-modules:     StringCalculator
  other-modules:       Parser
  build-depends:       base

executable string-calculator
  import:              shared-properties
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base, string-calculator

test-suite string-calculator-test
  import:              shared-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       StringCalculatorSpec
  build-depends:       base, hspec, hspec-discover, QuickCheck, string-calculator
